--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 /.idea
+grafana-9.3.2
+prometheus-2.41.0.linux-amd64
 
 # dependencies
 /node_modules
