--- a/infrastructure/datadog-values.yaml
+++ b/infrastructure/datadog-values.yaml
@@ -1,7 +1,8 @@
 datadog:
+  site: datadoghq.com
+  kubelet: 
+    tlsVerify: false
   apikey: 4ee1546ec11915d68c07cd6a4a24e7d0
   logs:
     enabled: true
     containerCollectAll: true
-  kubelet: 
-    tlsVerify: false
