--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
+    "dd-trace": "^3.11.0",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
     "mongoose": "^5.10.16",
