--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://51.138.203.243/api",
   "browserslist": {
     "production": [
       ">0.2%",
