--- a/infrastructure/templates/client/01-deployment.yaml
+++ b/infrastructure/templates/client/01-deployment.yaml
@@ -7,7 +7,7 @@ metadata:
     app: students-client
 
 spec:
-  replicas: 1
+  replicas: {{.Values.deployment.replicas}}
   selector:
     matchLabels:
       app: students-client
@@ -18,9 +18,9 @@ spec:
     spec:
       containers:
         - name: students-client
-          image: ramikammoun2023/client
+          image: {{.Values.image.clientname}}
           imagePullPolicy: Always
           resources:
           ports:
-            - containerPort: 3000
+            - containerPort: {{.Values.http.frontendport}}
       restartPolicy: Always
