--- a/infrastructure/templates/server/01-deployment.yaml
+++ b/infrastructure/templates/server/01-deployment.yaml
@@ -3,10 +3,10 @@ kind: Deployment
 metadata:
   name: students-server
   labels:
-    app: students-server
+    app: {{ toYaml .Values.labels | nindent 4 }}
 
 spec:
-  replicas: 1
+  replicas: {{.Values.deployment.replicas}}
   selector:
     matchLabels:
       app: students-server
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
         - name: students-server
-          image: ramikammoun2023/server
+          image: {{.Values.image.servername}}
           imagePullPolicy: Always
 
           env:
@@ -42,4 +42,4 @@ spec:
             value: "true"
 
           ports:
-            - containerPort: 5000
+            - containerPort: {{.Values.http.backendport}}
