--- a/infrastructure/templates/server/05-secrets.yaml
+++ b/infrastructure/templates/server/05-secrets.yaml
@@ -3,4 +3,4 @@ kind: Secret
 metadata:
   name: secrets-server
 data:
-  CONNECTION_URL: bW9uZ29kYitzcnY6Ly9SYW1pOnJhbWlAY2x1c3RlcjAuYnRiY3cubW9uZ29kYi5uZXQvP3JldHJ5V3JpdGVzPXRydWUmdz1tYWpvcml0eQo=
+  CONNECTION_URL: "Your Connection DB key"
